--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -214,7 +214,7 @@ nav.navigation-bar {
 
     nav.navigation-bar {
         top: 0;
-        width: 101%;
+        width: 126%;
         height: 50px;
         background-color: #ff4655;
         text-shadow: 0 1px rgba(0, 0, 0, 0.2);
