--- a/public/scss/store.scss
+++ b/public/scss/store.scss
@@ -271,7 +271,7 @@ main h2 {
         display: flex;
         flex-direction: column;
         margin-top: -2rem;
-        margin-left: -2rem;
+        margin-left: 0rem;
     }
 
     .items {
@@ -279,7 +279,7 @@ main h2 {
         flex-wrap: wrap;
         justify-content: center;
         margin-top: 5%;
-        margin-left: 2rem;
+        margin-left: 4rem;
         margin-bottom: 5%;
         cursor: default;
         margin-right: 4rem;
