--- a/public/scss/utils.scss
+++ b/public/scss/utils.scss
@@ -273,11 +273,11 @@ h3 {
         width: 100%;
         height: auto;
     }
-
+    
     main .daily-page {
         margin: 0 auto;
-        margin-left: 2%;
-        margin-top: 0%;
+        margin-left: 1rem;
+        margin-top: 1rem;
         width: 100%;
     }
 
